--- a/website/css/main/style.css
+++ b/website/css/main/style.css
@@ -103,6 +103,10 @@ table{
 	text-align: center;
 }
 
+.center{
+	text-align: center;
+}
+
 /* End Miscellaneous */
 
 /* Navigation */
@@ -166,6 +170,20 @@ a:active {
 
 #home_info {
    padding:20px;
+}
+
+.menu_item{
+	width: 30%;
+	float: left;
+	text-align: center;
+	position: relative;
+}
+
+.mainList{
+	width: 100%;
+	margin-left: 5%;
+	position: relative;
+	overflow: hidden;
 }
 /* End Main Content */
 
