--- a/website/css/main/chart.css
+++ b/website/css/main/chart.css
@@ -5,21 +5,7 @@
 #canvas-holder2 {
         width: 100%;
 }
-#chartjs-tooltip {
-        opacity: 1;
-        position: absolute;
-        background: rgba(0, 0, 0, .7);
-        color: white;
-        padding: 3px;
-        border-radius: 3px;
-        -webkit-transition: all .1s ease;
-        transition: all .1s ease;
-        pointer-events: none;
-        -webkit-transform: translate(-50%, 0);
-        transform: translate(-50%, 0);
-}
-   	.chartjs-tooltip-key{
-   		display:inline-block;
-   		width:10px;
-   		height:10px;
+#main_body_chart{
+	background-color: rgb(39, 139, 200);
+	position: relative;
 }
